--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             <button class="btn btn-primary align-middle">Add Task</button>
           </div>
         </header>
+        <main>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-action d-flex justify-content-between">
+              <span></span>
+              <i class="fa-solid fa-trash" style="cursor: pointer"></i>
+            </li>
+          </ul>
+        </main>
       </div>
     </div>
 
