--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </header>
         <main>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-action d-flex justify-content-between">
-              <span></span>
+            <li class="list-group-item list-group-item-action d-flex justify-content-between" v-for="(todos, index) in tasks" :key="todos.id" :class="{'done':todos.done}">
+              <span>{{todos.text}}</span>
               <i class="fa-solid fa-trash" style="cursor: pointer"></i>
             </li>
           </ul>
