--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <header class="text-center">
           <img src="" alt="Logo" />
           <div class="my-3">
-            <input type="text" class="form-control w-50 d-inline-block mx-3" />
-            <button class="btn btn-primary align-middle">Add Task</button>
+            <input type="text" class="form-control w-50 d-inline-block mx-3" v-model="newText"/>
+            <button class="btn btn-primary align-middle" @click="addNewTask()">Add Task</button>
           </div>
         </header>
         <main>
