added a logo image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="app">
       <div class="container m-auto m-0">
         <header class="text-center">
-          <img src="" alt="Logo" />
+          <img src="img/metal_slug_logo_4_a.jpg" alt="Logo" />
           <div class="my-3">
             <input type="text" class="form-control w-50 d-inline-block mx-3" v-model="newText" @keyup.enter="addNewTask()"/>
             <button class="btn btn-primary align-middle" @click="addNewTask()">Add Task</button>
