added a click function for sounds

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <header class="text-center">
           <img src="img/metal_slug_logo_4_a.jpg" alt="Logo" />
           <div class="my-3">
-            <input type="text" class="form-control w-50 d-inline-block mx-3" v-model="newText" @keyup.enter="addNewTask()"/>
-            <button class="btn btn-primary align-middle" @click="addNewTask()">Add Task</button>
+            <input type="text" class="form-control w-50 d-inline-block mx-3" v-model="newText" @keyup.enter="addNewTask(), playSound('/audio/missionstart.mp3')"/>
+            <button class="btn btn-primary align-middle" @click="addNewTask()" @click.prevent="playSound('/audio/missionstart.mp3')">Add Task</button>
           </div>
         </header>
         <main>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-action d-flex justify-content-between" v-for="(todos, index) in tasks" :key="todos.id" :class="{'done':todos.done}" @click="revertDone(index)">
+            <li class="list-group-item list-group-item-action d-flex justify-content-between" v-for="(todos, index) in tasks" :key="todos.id" :class="{'done':todos.done}" @click="revertDone(index)" @click.prevent="playSound('/audio/missioncomplete.mp3')">
               <span>{{todos.text}}</span>
-              <i class="fa-solid fa-trash" style="cursor: pointer" @click="tasksRemove(index)"></i>
+              <i class="fa-solid fa-trash" style="cursor: pointer" @click="tasksRemove(index)" @click.prevent="playSound('/audio/okay.mp3')"></i>
             </li>
           </ul>
         </main>
